--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,23 +1,50 @@
 <main class="mt-5 pt-5">
   <div class="container mt-4">
     <form class="form-signin w-100 m-auto">
-      <img class="mb-4" src="logo.png" alt="" width="100" height="100">
       <h1 class="h3 mb-3 fw-normal">Inicio de sesión</h1>
 
       <div class="form-floating">
-        <input [(ngModel)]="correo" name="correo" type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <input [(ngModel)]="correo" 
+               name="correo" 
+               type="email" 
+               class="form-control" 
+               id="floatingInput" 
+               placeholder="name@example.com">
         <label for="floatingInput">Correo</label>
       </div>
+
       <div class="form-floating">
-        <input [(ngModel)]="clave" name="clave" type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <input [(ngModel)]="clave" 
+               name="clave" 
+               type="password" 
+               class="form-control" 
+               id="floatingPassword" 
+               placeholder="Password">
         <label for="floatingPassword">Contraseña</label>
       </div>
 
-      <button (click)="login()" class="btn btn-primary w-100 py-2">Iniciar sesión</button>
+      <button (click)="login()" class="btn btn-primary w-100 py-2">
+        Iniciar sesión
+      </button>
 
-      <button (click)="autoFill()" type="button" class="btn btn-secondary w-100 py-2 mt-2">Acceso Rápido</button>
+      <div class="mt-3">
+        <h5>Acceso Rápido</h5>
+        <button (click)="autoFillAdmin()" 
+                type="button" 
+                class="btn btn-secondary w-100 py-2 mt-2">
+          Admin
+        </button>
+        <button (click)="autoFillEspecialista()" 
+                type="button" 
+                class="btn btn-secondary w-100 py-2 mt-2">
+          Especialista
+        </button>
+        <button (click)="autoFillPaciente()" 
+                type="button" 
+                class="btn btn-secondary w-100 py-2 mt-2">
+          Paciente
+        </button>
+      </div>
     </form>
   </div>
 </main>
-
-<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
