--- a/src/app/components/date-picker-simulado/date-picker-simulado.component.css
+++ b/src/app/components/date-picker-simulado/date-picker-simulado.component.css
@@ -16,7 +16,7 @@
 
 .available-dates {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(98px, 1fr));
   gap: 12px;
 }
 
@@ -33,6 +33,7 @@
 
 .day-button {
   width: 100%;
+  height: 98px;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -58,9 +59,12 @@
 }
 
 .time-button {
-  width: 100%;
+  width: 90px;
+  height: 90px;
   text-align: center;
   padding: 10px;
+  margin-right: 5px;
+  margin-bottom: 5px;
 }
 
 /* Responsive */
