--- a/src/app/components/estadisticas/estadisticas.component.html
+++ b/src/app/components/estadisticas/estadisticas.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container contenedor">
     <h2>Estadísticas del Sistema</h2>
     
     <!-- Gráficos -->
