--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <main class="mt-5 pt-5">
-  <div class="container mt-4">
+  <div class="container mt-4" [@slideInOut]>
     <form class="form-signin w-100 m-auto">
       <h1 class="h3 mb-3 fw-normal">Inicio de sesión</h1>
 
@@ -21,7 +21,6 @@
           class="form-control"
           [(ngModel)]="clave"
           appPasswordToggle
-          [appShakeOnError]="loginError"
           placeholder="Contraseña"
           name="contraseña"
         />
@@ -35,7 +34,7 @@
   </div>
 
   <!-- Quick Access Section -->
-  <div class="quick-access-section">
+  <div class="quick-access-section" [@fadeInOut]>
     <div class="container">
       <h5 class="text-center mb-4">Acceso Rápido</h5>
 
@@ -57,6 +56,7 @@
           class="quick-access-item"
           *ngFor="let user of quickAccessUsers"
           (click)="autoFill(user.email, user.password)"
+          [@fadeInOut]
         >
           <div class="profile-image"><img [src]="user.imageUrl || 'assets/profiles/default.jpg'" 
             [alt]="user.type"></div>
