--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,11 +2,13 @@
     <div class="card shadow-sm p-4">
       <h1 class="mb-3">Bienvenidos a Clínica Salud y Vida</h1>
       <p class="lead">Cuidamos de tu salud con profesionales altamente calificados y un ambiente de confianza.</p>
-  
-      <div class="mt-4">
-        <a (click)="navigateTo('/login')" class="btn btn-primary mx-2">Iniciar sesión</a>
-        <a (click)="navigateTo('/registro')" class="btn btn-secondary mx-2">Registrarse</a>
-      </div>
+      @if(!isLoggedIn){
+
+        <div class="mt-4">
+          <a (click)="navigateTo('/login')" class="btn btn-primary mx-2">Iniciar sesión</a>
+          <a (click)="navigateTo('/registro')" class="btn btn-secondary mx-2">Registrarse</a>
+        </div>
+      }
     </div>
 </div>
   
